# file-integrity

./: BerkeleyDB.cpp  BerkeleyDB.h  CMakeLists.txt  Makefile  README  README.md  client.cpp  daemon.cpp  daemon.h  exception.cpp  exception.h  fi-client  fi-server.cpp  file-integrity.cpp  file-integrity.h  logger.h  mysql.cpp  mysql.h  send_message_to_jabber.py  server.cpp  test.cpp
cmake-modules/: FindBerkeleyDB.cmake  FindMySQL.cmake  FindOpenSSL.cmake
debian/: changelog  control  file-integrity.dirs  file-integrity.install  file-integrity.logrotate  file-integrity.postinst  rules
